syntax = "proto3";

package pushproto;


message PushInfo {
    string udid = 1;
    string  token = 2;
    string push_magic = 3;
    string mdm_topic = 4;
}

